# BrainFusion-Agents

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.scratch/brainfusion-agents/: PRD.md
data/: dataset_registry.json  tumor_download_plan.json
docs/: cloud-run.md
docs/adr/: 0001-use-staged-public-dataset-validation.md  0002-make-pet-mr-the-mvp-mainline.md  0003-gate-ct-pathology-fusion-on-pairing.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/design/: agent-trace-spec.md  ct-agent-prototype.md  ct-pathology-pairing-gate.md  experiment-roadmap.md  implementation-kernel.md  pet-mr-mvp-workflow.md  public-dataset-strategy.md  system-architecture.md  wsi-preprocessing-branch.md
examples/manifests/: adni-case-selection.sample.json  tcga-wsi-preprocessing.sample.json
src/brainfusion_agents/: __init__.py  audit.py  cli.py  cloud_job.py  ct_manifest.py  datasets.py  demo_runtime.py  downloads.py  evidence.py  manifest.py  materialize.py  package_validation.py  pairing.py  pairing_manifest.py  pipeline.py  (+7 more)
tests/: test_cli.py  test_cloud_job.py  test_ct_manifest.py  test_dataset_registry.py  test_demo_runtime.py  test_downloads.py  test_evidence_bundle.py  test_manifest.py  test_materialize.py  test_package_validation.py  test_pairing_gate.py  test_pairing_manifest.py  test_pipeline.py  test_project_run.py  test_project_status.py  test_readiness.py  test_registry_audit.py  test_trace_validation.py  test_workflow_plans.py  test_workflow_routing.py  test_wsi_manifest.py
(+10 files in other folders)
