[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brainfusion-agents"
version = "0.1.0"
description = "Workflow kernel for staged multimodal medical AI agent research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
brainfusion-agents = "brainfusion_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brainfusion_agents = ["data/*.json"]
